# Chappie

./: .gitmodules  CMakeLists.txt
cmf/: CMakeLists.txt  chappie.cmf
server/: CMakeLists.txt
server/include/: db.hpp
server/src/: CMakeLists.txt  main.cpp
server/src/configuration/: CMakeLists.txt  chappieConfiguration.cpp  chappieConfiguration.hpp
server/src/consensus/: CMakeLists.txt  chappieReplica.cpp  chappieReplica.hpp  commandHandler.cpp  commandHandler.hpp
server/tests/: CMakeLists.txt  commandHandler_tests.cpp  common.hpp  configParser_test.cpp
server/tests/resources/: test_conf.yaml
